idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/implicitlyDuplicatedActuals/js/js.kt
package foo

class <!ACTUAL_MISSING!>ActualInMiddleCompatibleInJs<!>

actual class CompatibleInMiddleAndPlatforms